# BlendOS

./: .gitignore  BLENDEROS_ARCHITECTURE.md  BledOS_Technical_Specification.md  Ert  README.md  _workspace_blendos-repo.bundle  build-iso.sh  todo.md
bledos-archiso/: packages.x86_64
bledos-compositor/: meson.build
bledos-compositor/src/: main.c
bledos-default-template/: startup.py
bledos-services/: bledos-compositor.service  bledos-shell.service
bledos-shell-addons/bledos_app_launcher/: __init__.py
bledos-shell-addons/bledos_core/: __init__.py
bledos-shell-addons/bledos_dock/: __init__.py
bledos-shell-addons/bledos_filemanager/: __init__.py
bledos-shell-addons/bledos_input_router/: __init__.py
bledos-shell-addons/bledos_settings/: __init__.py
bledos-shell-addons/bledos_terminal/: __init__.py
blender-4.5.9/assets/brushes/: essentials_brushes-curve_sculpt.blend  essentials_brushes-gp_draw.blend  essentials_brushes-gp_sculpt.blend  essentials_brushes-gp_vertex.blend  essentials_brushes-gp_weight.blend  essentials_brushes-mesh_sculpt.blend  essentials_brushes-mesh_texture.blend  essentials_brushes-mesh_vertex.blend  essentials_brushes-mesh_weight.blend
blender-4.5.9/assets/geometry_nodes/: procedural_hair_node_assets.blend  smooth_by_angle.blend
blender-4.5.9/scripts/startup/bl_operators/: object_quick_effects.py
blender-4.5.9/source/blender/animrig/intern/: keyingsets.cc
blender-4.5.9/source/blender/blenkernel/: BKE_blender_version.h
summarized_conversations/: original_conversation_1778233635_7478.txt
(+15 files in other folders)
